WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308072
REGRESSION [block-in-inline] : Consider margin of preceding block when placing out-of-flow box inside inline
https://bugs.webkit.org/show_bug.cgi?id=308072
Summary
REGRESSION [block-in-inline] : Consider margin of preceding block when placin...
Ahmad Saleem
Reported
2026-02-17 12:44:33 PST
Hi Team, While looking into Safari / WebKit specific failures, I noticed that we fail following test case: WPT Test Case -
https://wpt.fyi/results/css/CSS2/positioning/abspos-029.html?label=master&label=experimental&aligned&q=safari%3Afail%20chrome%3Apass%20firefox%3Apass
WPT Test Case Live Link -
http://wpt.live/css/CSS2/positioning/abspos-029.html
^ fails in Safari Technology Preview 237. Introduced with Servo Change -
https://github.com/web-platform-tests/wpt/commit/fb675eb421ec07d27e69fde7b0d0b5e2a3b39097
Just raising, so we can fix it. Thanks!
Attachments
Patch
(5.12 KB, patch)
2026-02-17 20:05 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(5.18 KB, patch)
2026-02-18 07:37 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(6.35 KB, patch)
2026-02-20 10:48 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(6.35 KB, patch)
2026-02-20 11:47 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(7.86 KB, patch)
2026-02-21 13:50 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(16.42 KB, patch)
2026-02-21 17:40 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(16.73 KB, patch)
2026-02-21 18:00 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(6)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-17 15:09:30 PST
<
rdar://problem/170587347
>
alan
Comment 2
2026-02-17 20:05:06 PST
Created
attachment 478396
[details]
Patch
alan
Comment 3
2026-02-18 07:37:05 PST
Created
attachment 478398
[details]
Patch
alan
Comment 4
2026-02-20 10:48:44 PST
Created
attachment 478428
[details]
Patch
alan
Comment 5
2026-02-20 11:47:07 PST
Created
attachment 478431
[details]
Patch
alan
Comment 6
2026-02-21 13:50:37 PST
Created
attachment 478437
[details]
Patch
alan
Comment 7
2026-02-21 17:40:38 PST
Created
attachment 478438
[details]
Patch
alan
Comment 8
2026-02-21 18:00:22 PST
Created
attachment 478439
[details]
[fast-cq]Patch
EWS
Comment 9
2026-02-22 05:27:13 PST
Committed
308008@main
(120aa0417b02): <
https://commits.webkit.org/308008@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 478439
[details]
.
EWS
Comment 10
2026-03-06 00:02:13 PST
Committed
305413.410@safari-7624-branch
(916519f0e3fa): <
https://commits.webkit.org/305413.410@safari-7624-branch
> Reviewed commits have been landed. Closing PR #4610 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug