Source/WebCore/layout/formattingContexts/inline/InlineLine.h
@@ -64,6 +64,8 @@ public:
 
     enum class IncludeInsideListMarker : bool { No, Yes };
     bool hasContent(IncludeInsideListMarker = IncludeInsideListMarker::No) const;
+    bool hasContentOrDecoration(IncludeInsideListMarker = IncludeInsideListMarker::No) const;
+    bool hasLineSpanningInlineBoxOnly() const;
     bool hasRubyContent() const { return m_hasRubyContent; }
 
     InlineLayoutUnit contentLogicalWidth() const { return m_contentLogicalWidth; }
@@ -335,6 +337,17 @@ inline bool Line::hasContent(IncludeInsideListMarker includeInsideListMarker) co
             return true;
     }
     return false;
+}
+
+inline bool Line::hasLineSpanningInlineBoxOnly() const
+{
+    if (m_runs.isEmpty())
+        return false;
+    for (auto& run : m_runs | std::views::reverse) {
+        if (!run.isLineSpanningInlineBoxStart() && !run.isInlineBoxEnd())
+            return false;
+    }
+    return true;
 }
 
 inline void Line::TrimmableTrailingContent::reset()
